--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
-name: "@joaomarcuslf.io - Full-stack Web developer"
+name: "@joaomarcuslf.com - Full-stack Web developer"
 description: I'm Software developer since 2015 with great expertise in Front-end development. Here you can learn more about my skills and experience.
 author: João Marcus de Lemos Fernandes
 canonical: http://joaomarcuslf.com/
 keywords: Developer, Front-end, Full-stack, React, Javascript, Joaomarcuslf
 abstract: My presentation website as SOftware developer
 avatar: https://avatars0.githubusercontent.com/u/53450523?s=400&u=ba2eb6e6c63bc38c54e7db04e5132c833a83169c&v=4
+email: jmarcusfernandes@gmail.com
 
 footer-links:
   linktr: https://linktr.ee/joaomarcuslf
