--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ abstract: My presentation website as Software developer
 avatar: https://avatars0.githubusercontent.com/u/53450523?s=400&u=ba2eb6e6c63bc38c54e7db04e5132c833a83169c&v=4
 email: jmarcusfernandes@gmail.com
 linktr: https://linktr.ee/joaomarcuslf
-github: https://github.com/joaomarcuslf2
+github: https://github.com/joaomarcuslf
 linkedin: https://www.linkedin.com/in/jo%C3%A3o-marcus-fernandes-4b8814ba
-medium: https://medium.com/@joaomarcuslf
+medium: https://joaomarcuslf.medium.com
 codewars: https://www.codewars.com/users/joaomarcuslf/following
-sourcerer: https://sourcerer.io/joaomarcuslf2
+sourcerer: https://sourcerer.io/joaomarcuslf
 twitter: https://twitter.com/joaomarcuslf
 
 collections:
@@ -76,7 +76,7 @@ resume:
   en:
     from: Rio de Janeiro, Brazil
   skype: joao_marcus_l
-  github: https://github.com/joaomarcuslf2
+  github: https://github.com/joaomarcuslf
   linkedin: linkedin.com/in/joaomarcuslf
   skills:
     hard:
