Add mentorship page

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-name: "@joaomarcuslf.com - Full-stack Web developer"
-description: I'm Software developer since 2015 with great expertise in Front-end development. Here you can learn more about my skills and experience.
+name: "@joaomarcuslf.com - Full-stack Software engineer"
+description: I'm Software Engineer since 2015 with great expertise in Front-end development. I like to teach a lot, and write some posts, you can check more here.
 author: João Marcus de Lemos Fernandes
 canonical: http://joaomarcuslf.com/
-keywords: Developer, Front-end, Full-stack, React, Javascript, Flask, Python, Joaomarcuslf
+keywords: Developer, Software engineer, Front-end, Full-stack, React, Javascript, Flask, Python, Joaomarcuslf, Tech Mentor, Mentorship, Mentoria, Senior Developer, Web development
 abstract: My presentation website as Software developer
 avatar: https://avatars0.githubusercontent.com/u/53450523?s=400&u=ba2eb6e6c63bc38c54e7db04e5132c833a83169c&v=4
 email: jmarcusfernandes@gmail.com
@@ -67,7 +67,7 @@ exclude:
 
 resume:
   name: João Marcus de Lemos Fernandes
-  age: 24
+  age: 25
   email: jmarcusfernandes@gmail.com
   mobile: (21) 98843-2606
   site: http://joaomarcuslf.com/
