--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,19 +7,19 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-#      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-#        run: |
-#          npm install
-#          npm run build
-          
       - name: Build Jekyll files 🔧
         run: |
           docker run \
           -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
           jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
 
+      - name: Optimize Images 🖼️
+        run: |
+          npm install gifsicle pngquant-bin compress-images
+          node scripts/optimize_images.js
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: _site # The folder the action should deploy.
+          branch: gh-pages
+          folder: _site
