--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
       - name: Optimize Images 🖼️
         run: |
           npm install gifsicle pngquant-bin compress-images --quiet
-          node scripts/optimize_images.js
+          node scripts/add-preload-files.js
+          node scripts/optimize-images.js
 
       - name: Build Jekyll files 🔧
         run: |
