--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
 
       - name: Optimize Images 🖼️
         run: |
-          npm install gifsicle pngquant-bin compress-images
+          npm install gifsicle pngquant-bin compress-images --quiet
           node scripts/optimize_images.js
 
       - name: Build Jekyll files 🔧
