--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,7 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-minifier
+  - jekyll-image-optim
 
 jekyll-minifier:
   preserve_php: true                # Default: false
