--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
-  - scripts
+  - run
   - tmp
   - _image_optim_cache.yml
   - _image_optim_archive
