Test issue creater

--- a/.github/workflows/create_post.yml
+++ b/.github/workflows/create_post.yml
@@ -5,10 +5,10 @@ on:
 jobs:
   issue_commented:
     name: Issue comment
-    if: ${{ !github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "Comment on issue #${{ github.event.issue.number }}"
-          echo "Comment on issue #${{ github.event.issue.body }}"
-          echo github.event.issue
+      - name: Test
+        uses: actions/github-script@v4
+        with:
+          script: |
+            console.log(context.issue);
