--- a/.github/workflows/create_post.yml
+++ b/.github/workflows/create_post.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           script: |
             console.log(context.issue);
-            console.log(context.comment);
+            console.log(context);
