--- a/.github/workflows/create_post.yml
+++ b/.github/workflows/create_post.yml
@@ -13,7 +13,7 @@ jobs:
           script: |
             const fs = require('fs');
 
-            const { author_association, body, created_at, title } = context.payload.comment
+            const { author_association, body, created_at } = context.payload.comment
 
             if (author_association == 'OWNER') {
               console.log(context.payload.comment)
