--- a/.github/workflows/create_post.yml
+++ b/.github/workflows/create_post.yml
@@ -7,6 +7,9 @@ jobs:
     name: Issue comment
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
       - name: Create file
         uses: actions/github-script@v4
         with:
