--- a/.github/workflows/create_post.yml
+++ b/.github/workflows/create_post.yml
@@ -29,5 +29,7 @@ jobs:
 
               const name = title.replace(/[^\w\s]/gi, '').toLowerCase().split(" ").join("-")
 
-              fs.writeFileSync( `_posts/${date}-${name}`, body )
+              // fs.writeFileSync( `_posts/${date}-${name}.md`, body )
+
+              console.log(fs.readdirSync('./'))
             }
