--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,11 @@
 name: Build and Deploy
-on: [push]
+on:
+  push:
+  workflow_run:
+    workflows: ["Auto feed creator"]
+    types:
+      - completed
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
