--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Optimize Images 🖼️
         run: |
+          apt-get install imagemagick
+          apt-get install graphicsmagick
           npm install
           npm run build
 
