--- a/.github/workflows/generate_webp.yml
+++ b/.github/workflows/generate_webp.yml
@@ -15,6 +15,9 @@ jobs:
 
       - name: Generate WEBP files
         run: |
+          apt-get install imagemagick
+          apt-get install graphicsmagick
+          npm install
           npm install
           npm run webp
 
