--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "del": "^6.0.0",
     "gifsicle": "^5.2.0",
     "gulp": "^4.0.2",
+    "gulp-image-resize": "^0.13.1",
     "gulp-imagemin": "^7.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
