--- a/.github/workflows/generate_webp.yml
+++ b/.github/workflows/generate_webp.yml
@@ -15,8 +15,7 @@ jobs:
 
       - name: Generate WEBP files
         run: |
-          apt-get install imagemagick
-          apt-get install graphicsmagick
+          sudo apt-get install imagemagick graphicsmagick
           npm install
           npm install
           npm run webp
