--- a/.github/workflows/generate_webp.yml
+++ b/.github/workflows/generate_webp.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Generate WEBP files
         run: |
-          sudo apt-get install imagemagick graphicsmagick
+          sudo apt-get install imagemagick graphicsmagick libpng-dev
           npm install
           npm install
           npm run webp
