--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "gulp-imagemin": "^7.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
+    "imagemin": "^8.0.1",
+    "imagemin-giflossy": "^5.1.10",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-zopfli": "^7.0.0",
     "pngquant-bin": "^6.0.0"
   }
 }
