--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Optimize CSS 🪚
         run: |
-          chmod -R 777 _site
+          sudo chmod -R 777 _site
           npm run purgeCss
 
       - name: Deploy 🚀
