--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Optimize CSS 🪚
         run: |
+          chmod -R 777 _site
           npm run purgeCss
 
       - name: Deploy 🚀
