--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "@joaomarcuslf.com - Full-stack Software engineer"
 description: I'm Software Engineer since 2015 with great expertise in Front-end development. I like to teach a lot, and write some posts, you can check more here.
 author: João Marcus de Lemos Fernandes
-canonical: http://joaomarcuslf.com/
+canonical: https://joaomarcuslf.com/
 keywords: Developer, Software engineer, Front-end, Full-stack, React, Javascript, Flask, Python, Joaomarcuslf, Tech Mentor, Mentorship, Mentoria, Senior Developer, Web development
 abstract: My presentation website as Software developer
 avatar: https://avatars0.githubusercontent.com/u/53450523?s=400&u=ba2eb6e6c63bc38c54e7db04e5132c833a83169c&v=4
@@ -34,7 +34,7 @@ collections:
     output: false
     permalink: /:collection/:name
 
-url: http://joaomarcuslf.com
+url: https://joaomarcuslf.com
 
 baseurl: ""
 
@@ -114,7 +114,7 @@ resume:
   age: 25
   email: jmarcusfernandes@gmail.com
   mobile: (21) 98843-2606
-  site: http://joaomarcuslf.com/
+  site: https://joaomarcuslf.com/
   pt:
     from: Rio de Janeiro, Brasil
   en:
