--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/register": "^7.15.3",
+    "axios": "^0.22.0",
     "compress-images": "^1.9.9",
     "del": "^6.0.0",
     "gifsicle": "^5.2.0",
@@ -23,6 +24,7 @@
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-zopfli": "^7.0.0",
-    "pngquant-bin": "^6.0.0"
+    "pngquant-bin": "^6.0.0",
+    "yaml": "^1.10.2"
   }
 }
