--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build and Deploy
 on:
   push:
+    branches:
+      - main
+      - master
   workflow_run:
     workflows: ["Auto feed creator", "Generate webp"]
     types:
