--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
       - master
   workflow_run:
-    workflows: ["Auto feed creator", "Generate webp"]
+    workflows: ["Auto feed creator", "Generate webp", "Generate short_link"]
     types:
       - completed
 
